--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
-  "id": "reveal-in-navigation",
-  "name": "Reveal in Navigation",
-  "version": "1.0.0",
-  "minAppVersion": "1.0.0",
-  "description": "Auto-reveals the active file in the File Explorer without transferring keyboard focus",
-  "author": "",
-  "isDesktopOnly": false
+	"id": "auto-reveal-in-explorer",
+	"name": "Auto Reveal in Explorer",
+	"version": "1.0.0",
+	"minAppVersion": "1.5.0",
+	"description": "Auto-reveals the active file in the File Explorer without transferring keyboard focus",
+	"author": "MartinoPolo",
+	"authorUrl": "https://github.com/MartinoPolo",
+	"isDesktopOnly": false
 }
